--- a/6-budgety/starter/index.html
+++ b/6-budgety/starter/index.html
@@ -40,7 +40,7 @@
         <div class="bottom">
             <div class="add">
                 <div class="add__container">
-                    <select class="add__type">
+                    <select class="add__type" title="type">
                         <option value="income" selected>+</option>
                         <option value="expense">-</option>
                     </select>
