--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -13,19 +13,42 @@
     function getWeather(woeid) {
         fetch(`https://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`)
             .then(result => {
-                console.log(result);
+                // console.log(result);
                 return result.json();
             })
             .then(data => {
                 // console.log(data);
                 const today = data.consolidated_weather[0];
-                console.log(`Temperature in ${data.title} stay between ${today.min_temp} and ${today.max_temp}.`);
+                console.log(`Temperature today in ${data.title} stay between ${today.min_temp} and ${today.max_temp}.`);
             })
             .catch(error => console.log(error));
     }
 
     getWeather(44418);
     getWeather(2487956);
+
+    async function getWeatherAW(woeid) {
+        try {
+            const result = await fetch(
+                `https://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`);
+            const data = await result.json();
+            // console.log(data);
+            const tomorrow = data.consolidated_weather[1];
+            console.log(
+                `Temperature tomorrow in ${data.title} stay between ${tomorrow.min_temp} and ${tomorrow.max_temp}.`);
+            return data;
+        } catch (e) {
+            console.log(e);
+        }
+    }
+
+    getWeatherAW(44418);
+
+    let dataSanf;
+    getWeatherAW(2487956).then(data => {
+        dataSanf = data;
+        console.log(dataSanf);
+    });
 
 </script>
 </body>
